ipv-stub-template.yml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: Authentication, IPV and SPOT stubs

#      Tags:
#        Service: Authentication, IPV and SPOT stubs
#        Source: govuk-one-login/orch-stubs
#        Owner: di-orchestration@digital.cabinet-office.gov.uk

Parameters:
  Environment:
    Type: String
    Description: The name of the environment to deploy to
    Default: none
  CodeSigningConfigArn:
    Type: String
    Description: The ARN of the Code Signing Config to use, provided by the deployment pipeline
    Default: none
  PermissionsBoundary:
    Type: String
    Description: The ARN of the permissions boundary to apply when creating IAM roles
    Default: none
  VpcStackName:
    Type: String
    Description: The name of the stack used to create the VPC

Mappings:
  EnvironmentConfiguration:
    dev:
      ipvStubDomainName: ipvstub.oidc.authdev3.dev.account.gov.uk
      orchJwksUrl: https://oidc.authdev3.dev.account.gov.uk/.well-known/ipv-jwks.json
    build:
      ipvStubDomainName: ipvstub.oidc.build.account.gov.uk
      orchJwksUrl: https://oidc.build.account.gov.uk/.well-known/ipv-jwks.json

Conditions:
  UseCodeSigning: !Not [!Equals [none, !Ref CodeSigningConfigArn]]
  UsePermissionsBoundary: !Not [!Equals [none, !Ref PermissionsBoundary]]
  IsLocalEnv: !Equals [!Ref Environment, local]
  IsDev: !Equals [!Ref Environment, dev]

Globals:
  Function:
    CodeSigningConfigArn: !If
      - UseCodeSigning
      - !Ref CodeSigningConfigArn
      - !Ref AWS::NoValue
    PermissionsBoundary: !If
      - UsePermissionsBoundary
      - !Ref PermissionsBoundary
      - !Ref AWS::NoValue

Resources:
  UserIdentityTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Sub ${Environment}-IpvStub-UserIdentity
      KeySchema:
        - AttributeName: UserIdentityId
          KeyType: HASH
      AttributeDefinitions:
        - AttributeName: UserIdentityId
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      TimeToLiveSpecification:
        AttributeName: ttl
        Enabled: true
      Tags:
        - Key: Name
          Value: UserIdentity

  ApiGateway:
    Type: AWS::Serverless::Api
    Properties:
      Name: !Sub ${AWS::StackName}-ApiGateway
      StageName: Live
      AlwaysDeploy: true
      Tags:
        FMSRegionalPolicy: false
        CustomPolicy: true

  IPVAuthorizeLambda:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: .
      Handler: src/main/ipv-stub/ipv-authorize.handler
      LoggingConfig:
        LogGroup: !Ref IPVAuthorizeLambdaLogGroup
      Runtime: nodejs22.x
      Architectures:
        - arm64
      Environment:
        Variables:
          ENVIRONMENT: !Sub ${Environment}
          IPV_AUTHORIZE_PRIVATE_ENCRYPTION_KEY: "{{resolve:secretsmanager:/orch-stubs/ipv-private-encryption-key:SecretString}}"
          ORCH_PUBLIC_SIGNING_JWKS_URL:
            !FindInMap [EnvironmentConfiguration, !Ref Environment, orchJwksUrl]
          # These will always be over-written when running locally in parameters.json
          DYNAMO_ENDPOINT: !If [IsLocalEnv, "", !Ref AWS::NoValue]
          DUMMY_ORCH_JWKS: !If [IsLocalEnv, "", !Ref AWS::NoValue]
      Events:
        Get:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Path: /authorize
            Method: get
        Post:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Path: /authorize
            Method: post
      Policies:
        - !Ref UserIdentityTableReadAccessPolicy
        - !Ref UserIdentityTableWriteAccessPolicy
      Timeout: 11
      VpcConfig:
        SecurityGroupIds:
          - !Ref LambdaSecurityGroup
          - !Ref HttpsEgressSecurityGroup
        SubnetIds:
          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdA
          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdB
          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdC
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        EntryPoints:
          - src/main/ipv-stub/ipv-authorize.ts
        Minify: true
        External:
          - "@aws-sdk/client-dynamodb"
          - "@aws-sdk/lib-dynamodb"
        Sourcemap: true
        Target: es2022
        UseNpmCi: True

  IPVAuthorizeLambdaLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/orch-stubs/lambda/${Environment}-ipv-authorize-lambda
      RetentionInDays: 30

  IPVTokenLambda:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: .
      Handler: src/main/ipv-stub/ipv-token.handler
      LoggingConfig:
        LogGroup: !Ref IPVTokenLambdaLogGroup
      Runtime: nodejs22.x
      Architectures:
        - arm64
      Environment:
        Variables:
          ENVIRONMENT: !Sub ${Environment}
          ORCH_PUBLIC_SIGNING_JWKS_URL:
            !FindInMap [EnvironmentConfiguration, !Ref Environment, orchJwksUrl]
          IPV_AUDIENCE: !Sub https://identity.${Environment}.account.gov.uk/
      Events:
        Get:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Path: /token
            Method: get
        Post:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Path: /token
            Method: post
      Policies:
        - !Ref UserIdentityTableReadAccessPolicy
        - !Ref UserIdentityTableWriteAccessPolicy
      Timeout: 11
      VpcConfig:
        SecurityGroupIds:
          - !Ref LambdaSecurityGroup
          - !Ref HttpsEgressSecurityGroup
        SubnetIds:
          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdA
          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdB
          - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdC
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        EntryPoints:
          - src/main/ipv-stub/ipv-token.ts
        Minify: true
        External:
          - "@aws-sdk/client-dynamodb"
          - "@aws-sdk/lib-dynamodb"
        Sourcemap: true
        Target: es2022
        UseNpmCi: True

  IPVTokenLambdaLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/orch-stubs/lambda/${Environment}-ipv-token-lambda
      RetentionInDays: 30

  IPVUserIdentityLambda:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: .
      Handler: src/main/ipv-stub/ipv-user-identity.handler
      LoggingConfig:
        LogGroup: !Ref IPVUserIdentityLambdaLogGroup
      Runtime: nodejs22.x
      Architectures:
        - arm64
      Environment:
        Variables:
          ENVIRONMENT: !Sub ${Environment}
      Events:
        Get:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Path: /user-identity
            Method: get
        Post:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Path: /user-identity
            Method: post
      Policies:
        - !Ref UserIdentityTableReadAccessPolicy
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        EntryPoints:
          - src/main/ipv-stub/ipv-user-identity.ts
        Minify: true
        External:
          - "@aws-sdk/client-dynamodb"
          - "@aws-sdk/lib-dynamodb"
        Sourcemap: true
        Target: es2022
        UseNpmCi: True

  IPVJwksLambda:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: .
      Handler: src/main/ipv-stub/ipv-jwks.handler
      Runtime: nodejs22.x
      Architectures:
        - arm64
      Environment:
        Variables:
          ENVIRONMENT: !Sub ${Environment}
          IPV_AUTHORIZE_PUBLIC_ENCRYPTION_KEY: "{{resolve:ssm:/orch-stubs/ipv-public-encryption-key}}"
      Events:
        Get:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Path: /.well-known/jwks.json
            Method: get
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        EntryPoints:
          - src/main/ipv-stub/ipv-jwks.ts
        Minify: true
        Sourcemap: true
        Target: es2022
        UseNpmCi: True

  IPVUserIdentityLambdaLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/orch-stubs/lambda/${Environment}-ipv-user-identity-lambda
      RetentionInDays: 30

  UserIdentityTableReadAccessPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: AllowUserIdentityTableReadAccess
            Effect: Allow
            Action:
              - dynamodb:DescribeTable
              - dynamodb:Get*
            Resource: !GetAtt UserIdentityTable.Arn

  UserIdentityTableWriteAccessPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: AllowUserIdentityTableWriteAccess
            Effect: Allow
            Action:
              - dynamodb:PutItem
            Resource: !GetAtt UserIdentityTable.Arn

  PublicHostedZone:
    Type: AWS::Route53::HostedZone
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      Name:
        !FindInMap [
          EnvironmentConfiguration,
          !Ref Environment,
          ipvStubDomainName,
        ]

  HttpsEgressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow egress to external services
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outgoing HTTPS requests from security group
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Lambda Security Group permissions ruleset
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      SecurityGroupEgress:
        - DestinationSecurityGroupId:
            Fn::ImportValue: !Sub ${VpcStackName}-AWSServicesEndpointSecurityGroupId
          Description: Allow outbound traffic to vpc endpoints
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIp: 10.0.0.0/16
          Description: Allow outbound traffic to vpc endpoints
          IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
        - DestinationPrefixListId: pl-b3a742da
          Description: Allow traffic to dynamoDb
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443

Outputs:
  IpvHostedZoneId:
    Value: !GetAtt PublicHostedZone.Id
    Export:
      Name: IpvHostedZoneId
  IpvApiGatewayId:
    Value: !Ref ApiGateway
    Export:
      Name: IpvApiGatewayId
